updated orignal ids

--- a/studio/html/cmsBlock.html
+++ b/studio/html/cmsBlock.html
@@ -41,15 +41,15 @@
 
 <ul id ="generalView">
 {% for section in sections %}
-    <li id ="sections">
+    <li data-id ="sections">
         <div style="padding: 0.8em; margin: 0.5em; background: lightgray; border-radius: 7px;">
             <p>{{ section | safe }}</p>
         </div>
     </li>
 {% endfor %}
-{% for block in contentBlocks %}
 
-<li id ="contentBlocks">
+{% for block in contentBlocks %}
+<li data-id ="contentBlocks">
     <div style="padding: 0.8em; margin: 0.5em; background: lightgray; border-radius: 7px;">
         {% if block.blockTitle != null %}
             <h5>{{ block.blockTitle }}</h5>
@@ -60,18 +60,18 @@
 {% endfor %}
 
 {% for asset in assets %}
-    {% for file in asset.assetfile %}
-    <li id ="asset">
-        <div style="padding: 0.8em; margin: 0.5em; background: lightgray; border-radius: 7px;">
-            <img src="{{ cmsHost }}{{ file.url }}" class="img-fluid {{ asset.assetType }}"/>
-        </div>
+{% for file in asset.assetfile %}
+<li data-id ="asset">
+    <div style="padding: 0.8em; margin: 0.5em; background: lightgray; border-radius: 7px;">
+        <img src="{{ cmsHost }}{{ file.url }}" class="img-fluid {{ asset.assetType }}"/>
+    </div>
 
-    </li>
+</li>
     {% endfor %}
 {% endfor %}
 
 {% for faq in faqs %}
-<li id ="faqs">
+<li data-id ="faqs">
     <div style="padding: 0.8em; margin: 0.5em; background: lightgray; border-radius: 7px;">
         <h5>{{ faq.question }}</h5>
         <div>{{ faq.answer | safe }}</div>
@@ -81,7 +81,7 @@
 {% endfor %}
 
 {% for tip in tips %}
-<li id ="tips">
+<li data-id ="tips">
     <div style="padding: 0.8em; margin: 0.5em; background: lightgray; border-radius: 7px;" class = "{{ tip.tipCssClass }}"> 
         <h5>{{ tip.tipTitle }}</h5>
         <div>{{ tip.tipContent | safe }}</div>
@@ -91,7 +91,7 @@
 {% endfor %}
 
 {% for table in tables2 %}
-<li id = "tables2">
+<li data-id = "tables2">
     <div style="padding: 0.8em; margin: 0.5em; background: lightgray; border-radius: 7px;">
         <table>
             {% if table.hasHeaderRow.0 == 'yes' %}
@@ -121,7 +121,7 @@
 {% endfor %}
 
 {% for table in tables3 %}
-<li id ="tables3">
+<li data-id ="tables3">
     <div style="padding: 0.8em; margin: 0.5em; background: lightgray; border-radius: 7px;">
         <table>
             {% if table.hasHeaderRow.0 == 'yes' %}
@@ -154,7 +154,7 @@
 {% endfor %}
 
 {% for table in tables4 %}
-<li id ="tables4">
+<li data-id ="tables4">
     <div style="padding: 0.8em; margin: 0.5em; background: lightgray; border-radius: 7px;">
         <table>
             {% if table.hasHeaderRow.0 == 'yes' %}
@@ -190,7 +190,7 @@
 {% endfor %}
 
 {% for table in tables5 %}
-<li id = "tables5">
+<li data-id = "tables5">
 
     <div style="padding: 0.8em; margin: 0.5em; background: lightgray; border-radius: 7px;">
         <table>
@@ -230,7 +230,7 @@
 {% endfor %}
 
 {% for accordion in accordionneo %}
-<li id = "accordionneo">
+<li data-id = "accordionneo">
     <div>
         {% if accordion.accordionTitle != null %}
             <h5>{{ accordion.accordionTitle }}</h5>
